<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_bar_laout" android:id="@+id/register_toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/register_txt_create_new_account"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_display_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/reg_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_display_name" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout

        android:id="@+id/reg_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/hint_email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/hint_password" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/reg_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_acount_btn_txt" />

</LinearLayout>