<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.alexander.yourlocalfriend.MainActivity">


    <Button
        android:id="@+id/save_your_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/save_your_info_btn" />
    <android.support.design.widget.TextInputLayout

        android:id="@+id/your_age_txt"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/your_age_input_edit_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/your_age" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:id="@+id/your_hobbies_txt"
        android:layout_marginTop="110dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/your_hobbies"
            android:layout_marginTop="110dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/what_is_your_hobbies" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout

        android:id="@+id/your_sex_txt"
        android:layout_marginTop="160dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/your_sex"
            android:layout_marginTop="160dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="Man or woman?" />
    </android.support.design.widget.TextInputLayout>



</RelativeLayout>
