<?xml version="1.0" encoding="utf-8"?>

<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TestLinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab3header"></TextView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab3header2"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextGender"
                style="@android:style/Widget.DeviceDefault.EditText"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elegantTextHeight="true"
                android:ems="10"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:text="Man or women?"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                android:textStyle="italic"></EditText>

            <EditText
                android:id="@+id/editTextAge"
                style="@android:style/Widget.DeviceDefault.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.50"
                android:background="@color/colorPrimary"
                android:elegantTextHeight="true"
                android:ems="10"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:text="How old is your friend? E.g.: About 45?"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                android:textStyle="italic"></EditText>

        </LinearLayout>

        <EditText
            android:id="@+id/editTextHobby"
            style="@android:style/Widget.DeviceDefault.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elegantTextHeight="true"
            android:ems="10"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:text="What are  your friends hobby? E.g.: food, art galleries"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            android:textStyle="italic"></EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSrchYourParameters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/btnSrchYourParameters" />

            <Button
                android:id="@+id/btnSrchEnteredParameters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/btnSrchEnteredParameters" />
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/local_friend_RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v7.widget.RecyclerView>



</LinearLayout>